--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -24,13 +24,17 @@ jobs:
       - name: Install dependencies
         run: pip install requests beautifulsoup4
 
-      - name: Run scraper
+      - name: Run ATP scraper
         run: python fetch_atp_race.py
+
+      - name: Run WTA scraper
+        run: python fetch_wta_race.py
+
 
       - name: Commit updated CSV
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add atp_race_top500.csv
+          git add atp_race_top500.csv wta_race_top500.csv
           git commit -m "Daily ATP Race update" || echo "No changes"
           git push
