Added weekly timestamp and archive

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,8 @@ name: Update ATP & WTA Race CSV
 
 on:
   schedule:
-    - cron: "0 6 * * *"
+    - cron: "0 6 * * *"     # daily at 06:00 UTC
+    - cron: "15 6 * * 1"    # weekly snapshot Mondays at 06:15 UTC
   workflow_dispatch:
 
 permissions:
@@ -32,20 +33,26 @@ jobs:
       - name: Run WTA scraper (Tennis24)
         run: python fetch_wta_race_tennis24.py
 
+      - name: Archive weekly snapshot
+        if: github.event.schedule == '15 6 * * 1'
+        run: python archive_weekly_snapshot.py
+
+      # Optional: only upload debug files if they exist
       - name: Upload Tennis24 debug artifacts (if present)
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: tennis24-debug
+          if-no-files-found: ignore
           path: |
             tennis24_debug.html
             tennis24_debug.png
 
-      - name: Commit updated CSV
+      - name: Commit updated CSV (and weekly archive if created)
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add atp_race_top500.csv wta_race_top500.csv
+          git add atp_race_top500.csv wta_race_top500.csv archive/
           git commit -m "Daily ATP & WTA Race update" || echo "No changes"
           git push
 
