--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -37,7 +37,6 @@ jobs:
         if: github.event.schedule == '15 6 * * 1'
         run: python archive_weekly_snapshot.py
 
-      # Optional: only upload debug files if they exist
       - name: Upload Tennis24 debug artifacts (if present)
         if: always()
         uses: actions/upload-artifact@v4
@@ -52,7 +51,13 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add atp_race_top500.csv wta_race_top500.csv archive/
+
+          git add atp_race_top500.csv wta_race_top500.csv
+
+          if [ -d "archive" ]; then
+            git add archive/
+          fi
+
           git commit -m "Daily ATP & WTA Race update" || echo "No changes"
           git push
 
